libdrm (2.4.65-2) UNRELEASED; urgency=medium

  * Update libdrm-freedreno1.symbols and shlibs.
  * Drop Debian revision from new symbols in libdrm2.symbols.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 26 Oct 2015 12:41:34 +0100

libdrm (2.4.65-1) unstable; urgency=medium

  [ Andreas Boll ]
  * New upstream release.
  * Update debian/upstream/signing-key.asc.
  * Update symbols file and bump shlibs for libdrm2.
  * Enable libdrm-amdgpu1 on kfreebsd-*.
  * Fix Vcs-* fields.
  * Add upstream url.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 26 Oct 2015 10:22:57 +0200

libdrm (2.4.64-1) unstable; urgency=medium

  [ Robert Hooker ]
  * New upstream release.
  * Bump symbols file and shlibs for libdrm-freedreno1.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 19 Aug 2015 07:52:50 +0300

libdrm (2.4.63-1) unstable; urgency=medium

  [ Robert Hooker ]
  * New upstream release.
    - Drop Fix-headers-inclusion-in-xf86drmMode.c.diff, upstream.
  * Add new libdrm-amdgpu1 package.

 -- Timo Aaltonen <tjaalton@debian.org>  Sat, 15 Aug 2015 18:55:57 +0300

libdrm (2.4.62-1) unstable; urgency=medium

  [ Sven Joachim ]
  * New upstream release.
    - nouveau: restore check that avoids multiple user bos per kernel bo
      (Closes: #789759).
  * Update symbols file and bump shlibs for libdrm2.
  * Refresh the patch from 2.4.60-3 after upstream changes.
  * Remove duplicate Section fields from debian/control.
  * Update debian/upstream/signing-key.asc.
  * Bump Standards-Version to 3.9.6, no changes needed.

  [ Julien Cristau ]
  * Update debian/upstream/signing-key.asc.
  * Fix kfreebsd patch that caused an FTBFS on Linux/x32: only include
    <sys/sysctl.h> if configure detects it (closes: #787496).  Thanks,
    Thorsten Glaser.
  * Add build-dep on xutils-dev for xorg-macros.
  * Cherry-pick upstream patch to let valgrind auto-detection work.

 -- Julien Cristau <jcristau@debian.org>  Thu, 02 Jul 2015 21:11:21 +0200

libdrm (2.4.60-3) unstable; urgency=medium
