@@ -42,20 +42,28 @@ else
 	confflags += --disable-intel
 endif
 
-# Omap and freedreno are only on arm
+# Exynos/Omap/Tegra are only on arm
 ifneq (,$(filter arm,$(DEB_HOST_ARCH_CPU)))
 	ARM = yes
 endif
 ifeq ($(ARM), yes)
-	confflags += --enable-freedreno --enable-freedreno-kgsl
 	confflags += --enable-exynos-experimental-api
 	confflags += --enable-omap-experimental-api
 	confflags += --enable-tegra-experimental-api
 else
-	confflags += --disable-freedreno
 	confflags += --disable-exynos-experimental-api
 	confflags += --disable-omap-experimental-api
 	confflags += --disable-tegra-experimental-api
+endif
+
+# Freedreno is on arm and arm64
+ifneq (,$(filter arm arm64,$(DEB_HOST_ARCH_CPU)))
+	FREEDRENO = yes
+endif
+ifeq ($(FREEDRENO), yes)
+	confflags += --enable-freedreno --enable-freedreno-kgsl
+else
+	confflags += --disable-freedreno
 endif
 
 ###
@@ -87,9 +95,11 @@ endif
 	dh_strip -plibdrm-amdgpu1 --dbg-package=libdrm-amdgpu1-dbg
 ifeq ($(ARM), yes)
 	dh_strip -plibdrm-omap1 --dbg-package=libdrm-omap1-dbg
-	dh_strip -plibdrm-freedreno1 --dbg-package=libdrm-freedreno1-dbg
 	dh_strip -plibdrm-exynos1 --dbg-package=libdrm-exynos1-dbg
 	dh_strip -plibdrm-tegra0 --dbg-package=libdrm-tegra0-dbg
+endif
+ifeq ($(FREEDRENO), yes)
+	dh_strip -plibdrm-freedreno1 --dbg-package=libdrm-freedreno1-dbg
 endif
 	dh_strip -s --remaining-packages
 
@@ -105,9 +115,11 @@ endif
 	dh_makeshlibs -plibdrm-amdgpu1 -V'libdrm-amdgpu1 (>= 2.4.63)' -- -c4
 ifeq ($(ARM), yes)
 	dh_makeshlibs -plibdrm-omap1 -V'libdrm-omap1 (>= 2.4.38)' -- -c4
-	dh_makeshlibs -plibdrm-freedreno1 -V'libdrm-freedreno1 (>= 2.4.65)' -- -c4
 	dh_makeshlibs -plibdrm-exynos1 -V'libdrm-exynos1 (>= 2.4.60)' -- -c4
 	dh_makeshlibs -plibdrm-tegra0 -V'libdrm-tegra0' -- -c4
+endif
+ifeq ($(FREEDRENO), yes)
+	dh_makeshlibs -plibdrm-freedreno1 -V'libdrm-freedreno1 (>= 2.4.57)' -- -c4
 endif
 
 %:
